--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
     <mat-card style="box-shadow: none;">
       <mat-tab-group style="box-shadow: none;" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
 
-        <mat-tab label="First">
+        <mat-tab label="Product Info">
           <form style="margin: 50px 0;" class="example-form">
 
             <table class="example-full-width" cellspacing="0">
@@ -174,7 +174,7 @@
 
                   <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="csvInputChange($event)"
                     accept=".csv" />
-                  <button mat-flat-button color="primary" (click)="csvInput.click()">
+                  <button class="example-full-width" mat-flat-button color="primary" (click)="csvInput.click()">
                     Choose File
                   </button>
                 </td>
@@ -197,16 +197,17 @@
             <mat-form-field appearance="outline" class="example-full-width">
               <input matInput type="text">
             </mat-form-field>
+
+            <mat-label class="label">Product Description</mat-label>
+            <mat-form-field appearance="outline" class="example-full-width">
+              <textarea matInput></textarea>
+            </mat-form-field>
           </form>
 
-          <!-- <mat-divider></mat-divider> -->
-
           <button mat-raised-button color="primary" style="margin-top: 1em; float: right;">Save</button>
-
-
         </mat-tab>
 
-        <mat-tab label="Second"> Content 2 </mat-tab>
+        <mat-tab label="Images"> Content 2 </mat-tab>
         <mat-tab label="Third"> Content 3 </mat-tab>
         <mat-tab label="fourth"> Content 4 </mat-tab>
 
@@ -214,15 +215,3 @@
     </mat-card>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!-- <td>
-                  <mat-label class="label">first name</mat-label>
-                  <mat-form-field appearance="outline" class="example-full-width">
-                    <mat-select style="font-size: 13px;">
-                      <mat-option value="option">Option</mat-option>
-                      <mat-option value="option">Option</mat-option>
-                      <mat-option value="option">Option</mat-option>
-                      <mat-option value="option">Option</mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </td> -->
