--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,16 +82,36 @@
     <mat-card style="box-shadow: none;">
       <mat-tab-group style="box-shadow: none;" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
 
-        <mat-tab label="Product Info">
-          <form style="margin: 50px 0;" class="example-form">
+        <mat-tab label="Product Create">
+          <form [formGroup]="form" (ngSubmit)="onSave()" style="margin: 50px 0;" class="example-form">
+            <div style="color: red; " *ngIf="form.errors">There is something wrong</div>
 
             <table class="example-full-width" cellspacing="0">
               <tr>
+                <td>
+                  <mat-label class="label">Product Name</mat-label>
+                  <mat-form-field appearance="outline" class="example-full-width">
+                    <input formControlName="name" matInput type="text">
+                    <mat-hint *ngIf="name.pending">checking for uniqueness</mat-hint>
+                    <mat-error *ngIf="name.touched && name.invalid">
+                      <span *ngIf="name.errors.required"> Enter the name of product</span>
+                      <span *ngIf="name.errors.minlength">Name of product should be minumum
+                        {{ name.errors.minlength.requiredLength }} characters</span>
+                      <span *ngIf="name.errors.cannotContainSpace">Product name cannot contain space</span>
+                      <span *ngIf="name.errors.shouldBeUnique">Product name is already taken</span>
+                    </mat-error>
 
+                  </mat-form-field>
+
+                </td>
+              </tr>
+
+              <tr>
                 <td>
                   <mat-label class="label">Select Category</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input type="text" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                    <input formControlName="category" type="text" aria-label="Number" matInput [formControl]="myControl"
+                      [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
                     <mat-autocomplete #auto="matAutocomplete">
                       <mat-option *ngFor="let option of options" [value]="option">
@@ -103,7 +123,8 @@
                 <td>
                   <mat-label class="label">Select Brand</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input type="text" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                    <input formControlName="brand" type="text" aria-label="Number" matInput [formControl]="myControl"
+                      [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
                     <mat-autocomplete #auto="matAutocomplete">
                       <mat-option *ngFor="let option of options" [value]="option">
@@ -115,7 +136,8 @@
                 <td>
                   <mat-label class="label">Select Unit</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input type="text" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                    <input formControlName="unit" type="text" aria-label="Number" matInput [formControl]="myControl"
+                      [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
 
                     <mat-autocomplete #auto="matAutocomplete">
@@ -131,21 +153,21 @@
                 <td>
                   <mat-label class="label">Barcode Code</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input matInput type="text">
+                    <input formControlName="barcode" matInput type="text">
                   </mat-form-field>
                 </td>
 
                 <td>
-                  <mat-label class="label">Product Cost</mat-label>
+                  <mat-label class="label">Product Price</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input matInput type="number">
+                    <input formControlName="price" matInput type="number">
                   </mat-form-field>
                 </td>
 
                 <td>
                   <mat-label class="label">Product Sale Price</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input matInput type="number">
+                    <input formControlName="salePrice" matInput type="number">
                   </mat-form-field>
                 </td>
               </tr>
@@ -154,15 +176,15 @@
                 <td>
                   <mat-label class="label">Product Alert Quantity</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input matInput type="number">
+                    <input formControlName="alertQuantity" matInput type="number">
                   </mat-form-field>
                 </td>
                 <td>
                   <mat-label class="label">Tax Type</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input type="text" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+                    <input formControlName="taxType" type="text" aria-label="Number" matInput [formControl]="myControl"
+                      [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
-
                     <mat-autocomplete #auto="matAutocomplete">
                       <mat-option *ngFor="let option of options" [value]="option">
                         {{option}}
@@ -182,29 +204,20 @@
               </tr>
             </table>
 
+            <table class="example-full-width" cellspacing="0">
+              <mat-label class="label">Product Description</mat-label>
+              <mat-form-field appearance="outline" class="example-full-width">
+                <textarea formControlName="description" matInput></textarea>
+              </mat-form-field>
+            </table>
+
+
+            <button mat-raised-button color="primary" type="submit" style="margin-top: 1em; float: right;">Save</button>
 
 
           </form>
 
-          <mat-divider></mat-divider>
 
-          <section style="margin-top: 5em;" class="example-section">
-            <mat-checkbox class="example-margin label" color="primary">Is Published</mat-checkbox>
-          </section>
-
-          <form style="margin-top: 1em;">
-            <mat-label class="label">Product Name</mat-label>
-            <mat-form-field appearance="outline" class="example-full-width">
-              <input matInput type="text">
-            </mat-form-field>
-
-            <mat-label class="label">Product Description</mat-label>
-            <mat-form-field appearance="outline" class="example-full-width">
-              <textarea matInput></textarea>
-            </mat-form-field>
-          </form>
-
-          <button mat-raised-button color="primary" style="margin-top: 1em; float: right;">Save</button>
         </mat-tab>
 
         <mat-tab label="Images"> Content 2 </mat-tab>
