--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,8 @@
     <span class="toolbar_logo">POS</span>
     <div class="toolbar_direction">
       <button mat-button>Products</button>
-
-      <!-- <span style="cursor: pointer;"> </span> -->
       <span> / </span>
       <button mat-button>New Product</button>
-
     </div>
 
     <span class="example-spacer"></span>
@@ -77,15 +74,22 @@
   </mat-sidenav>
   <mat-sidenav-content class="main_content">
 
-    <mat-card style="box-shadow: none;" class="main_content-title">Products</mat-card>
+    <mat-card style="box-shadow: none;" class="main_content-title">
+      <span>Product Create</span>
+
+      <button style="float: right;" mat-raised-button color="primary">
+        <mat-icon style="margin-right: 5px;">list</mat-icon>
+        List All Product
+      </button>
+
+    </mat-card>
 
     <mat-card style="box-shadow: none;">
       <mat-tab-group style="box-shadow: none;" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
 
         <mat-tab label="Product Create">
-          <form [formGroup]="form" (ngSubmit)="onSave()" style="margin: 50px 0;" class="example-form">
+          <form [formGroup]="form" (ngSubmit)="onCreateProduct()" style="margin: 50px 0;" class="example-form">
             <div style="color: red; " *ngIf="form.errors">There is something wrong</div>
-
             <table class="example-full-width" cellspacing="0">
               <tr>
                 <td>
@@ -100,7 +104,6 @@
                       <span *ngIf="name.errors.cannotContainSpace">Product name cannot contain space</span>
                       <span *ngIf="name.errors.shouldBeUnique">Product name is already taken</span>
                     </mat-error>
-
                   </mat-form-field>
 
                 </td>
@@ -110,8 +113,8 @@
                 <td>
                   <mat-label class="label">Select Category</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input formControlName="category" type="text" aria-label="Number" matInput [formControl]="myControl"
-                      [matAutocomplete]="auto">
+                    <input formControlName="categoryId" type="text" aria-label="Number" matInput
+                      [formControl]="myControl" [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
                     <mat-autocomplete #auto="matAutocomplete">
                       <mat-option *ngFor="let option of options" [value]="option">
@@ -123,7 +126,7 @@
                 <td>
                   <mat-label class="label">Select Brand</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input formControlName="brand" type="text" aria-label="Number" matInput [formControl]="myControl"
+                    <input formControlName="brandId" type="text" aria-label="Number" matInput [formControl]="myControl"
                       [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
                     <mat-autocomplete #auto="matAutocomplete">
@@ -136,7 +139,7 @@
                 <td>
                   <mat-label class="label">Select Unit</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input formControlName="unit" type="text" aria-label="Number" matInput [formControl]="myControl"
+                    <input formControlName="unitId" type="text" aria-label="Number" matInput [formControl]="myControl"
                       [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
 
@@ -171,18 +174,17 @@
                   </mat-form-field>
                 </td>
               </tr>
-
               <tr>
                 <td>
                   <mat-label class="label">Product Alert Quantity</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input formControlName="alertQuantity" matInput type="number">
+                    <input formControlName="quantity" matInput type="number">
                   </mat-form-field>
                 </td>
                 <td>
                   <mat-label class="label">Tax Type</mat-label>
                   <mat-form-field appearance="outline" class="example-full-width">
-                    <input formControlName="taxType" type="text" aria-label="Number" matInput [formControl]="myControl"
+                    <input formControlName="typeId" type="text" aria-label="Number" matInput [formControl]="myControl"
                       [matAutocomplete]="auto">
                     <mat-icon style="color: #6d6d6d; font-size: 20px;" matSuffix>keyboard_arrow_down</mat-icon>
                     <mat-autocomplete #auto="matAutocomplete">
@@ -193,14 +195,12 @@
                   </mat-form-field>
                 </td>
                 <td>
-
                   <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="csvInputChange($event)"
                     accept=".csv" />
                   <button class="example-full-width" mat-flat-button color="primary" (click)="csvInput.click()">
                     Choose File
                   </button>
                 </td>
-
               </tr>
             </table>
 
@@ -210,14 +210,8 @@
                 <textarea formControlName="description" matInput></textarea>
               </mat-form-field>
             </table>
-
-
             <button mat-raised-button color="primary" type="submit" style="margin-top: 1em; float: right;">Save</button>
-
-
           </form>
-
-
         </mat-tab>
 
         <mat-tab label="Images"> Content 2 </mat-tab>
@@ -226,5 +220,9 @@
 
       </mat-tab-group>
     </mat-card>
+  </mat-sidenav-content>
+
+  <mat-sidenav-content class="main_content">
+
   </mat-sidenav-content>
 </mat-sidenav-container>
