add expansion panel to sidenave

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -83,7 +83,7 @@ button {
   &_item {
     font-weight: 300;
     color: #585858;
-    transition: all .2s;
+    transition: all .3s;
 
     &-1:hover::after { background-color: #f7941d }
     &-2:hover::after { background-color: #fb5d5d }
@@ -92,8 +92,8 @@ button {
   }
 
   &_item:hover {
-    background-color: #e3e3e3;
-    padding-left: 5px;
+    // background-color: #e3e3e3;
+    // padding-left: 6px;
 
     &::after {
       content: "";
@@ -115,38 +115,12 @@ button {
 
 .main_content {
   padding: 10px;
-
-  &-title {
-    box-shadow: none;
-    font-size: 20px;
-    font-weight: 300;
-    color: #3f51b5;
-    margin-bottom: 15px;
-  }
-
-  &-tap {
-    padding-top: 40px;
-  }
-
-  &-form {
-    margin-top: 40px;
-    // border: 1px solid;
-    display: flex;
-    
-  }
 }
 
-.label {
-  font-weight: 300;
-  color: #6d6d6d;
-  font-size: 15px;
-}
 
 div.mat-form-field-infix { padding: 0 3px 10px 3px !important }
 .mat-form-field-outline:hover  { border: 2px solid red;}
 .example-form {
-  // min-width: 150px;
-  // max-width: 500px;
   width: 100%;
 }
 
@@ -167,6 +141,25 @@ div.mat-ink-bar {
   background-color: red;
 }
 
+
+//SIDENAV
+
+div.mat-expansion-panel-body{
+  margin-top: -10px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+div.mat-accordion {
+  border-radius: 0;
+}
+
+div.mat-accordion .mat-expansion-panel:first-of-type {
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+}
+
+//////////////////////////////////////////////////////
 
 
 // <div class="main_content-header">
