--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,25 +51,43 @@
 
 <mat-sidenav-container class="example-container">
   <mat-sidenav class="sidenav" mode="side" opened>
+    <mat-accordion class="sidenav_list">
+      <mat-expansion-panel style="box-shadow: none;" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header class="sidenav_item sidenav_item-1">
+          <mat-panel-title>
+            <mat-icon style="margin-right: 20px;" aria-hidden="false">shopping_cart</mat-icon>
+            <span>Product </span>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <a mat-list-item style="height: 40px;">
+            <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
+              fiber_manual_record
+            </mat-icon>
+            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Product List</span>
+          </a>
+          <a mat-list-item style="height: 40px;">
+            <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
+              fiber_manual_record
+            </mat-icon>
+            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Add Product</span>
+          </a>
+          <a mat-list-item style="height: 40px;">
+            <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
+              fiber_manual_record
+            </mat-icon>
+            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Categories</span>
+          </a>
 
-    <mat-nav-list class="sidenav_list">
-      <a mat-list-item class="sidenav_item sidenav_item-1">
-        <mat-icon aria-hidden="false" class="sidenav_icon">shopping_cart</mat-icon>
-        Products
-      </a>
-      <a mat-list-item class="sidenav_item sidenav_item-2">
-        <mat-icon aria-hidden="false" class="sidenav_icon">style</mat-icon>
-        Categories
-      </a>
-      <a mat-list-item class="sidenav_item sidenav_item-3">
-        <mat-icon aria-hidden="false" class="sidenav_icon">bookmark</mat-icon>
-        Brands
-      </a>
-      <a mat-list-item class="sidenav_item sidenav_item-4">
-        <mat-icon aria-hidden="false" class="sidenav_icon">layers</mat-icon>
-        Items
-      </a>
-    </mat-nav-list>
+          <a mat-list-item style="height: 40px;">
+            <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
+              fiber_manual_record
+            </mat-icon>
+            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Items</span>
+          </a>
+        </mat-nav-list>
+      </mat-expansion-panel>
+    </mat-accordion>
 
   </mat-sidenav>
   <mat-sidenav-content class="main_content">
