--- a/src/app/product/product-create/product-create.component.html
+++ b/src/app/product/product-create/product-create.component.html
@@ -1,7 +1,7 @@
 <mat-card style="box-shadow: none;" class="main_content-title">
     <span>Product Create</span>
 
-    <button style="float: right;" mat-raised-button color="primary">
+    <button routerLink="/products" style="float: right;" mat-raised-button color="primary">
         <mat-icon style="margin-right: 5px;">list</mat-icon>
         List All Product
     </button>
