--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
 <mat-toolbar class="toolbar" color="primary">
   <mat-toolbar-row>
     <span class="toolbar_logo">POS</span>
-    <div class="toolbar_direction">
-      <button mat-button>Products</button>
-      <span> / </span>
-      <button mat-button>New Product</button>
-    </div>
-
     <span class="example-spacer"></span>
-
     <div class="toolbar_content">
       <!-- time -->
       <button mat-button>04:13 am 24-10-2020</button>
@@ -59,14 +52,15 @@
             <span>Product </span>
           </mat-panel-title>
         </mat-expansion-panel-header>
+
         <mat-nav-list>
-          <a mat-list-item style="height: 40px;">
+          <a routerLink="/products" [queryParams]="{ page: 1, order: 'newest' }" mat-list-item style="height: 40px;">
             <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
               fiber_manual_record
             </mat-icon>
             <span style="font-size: 14px; color: rgba(0,0,0,.54);">Product List</span>
           </a>
-          <a mat-list-item style="height: 40px;">
+          <a routerLink="/product-create" mat-list-item style="height: 40px;">
             <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
               fiber_manual_record
             </mat-icon>
