--- a/src/app/product/product-list/product-list.component.scss
+++ b/src/app/product/product-list/product-list.component.scss
@@ -11,3 +11,14 @@ td, th {
   width: auto;
   overflow: hidden;
 }
+
+.main_content {
+  padding: 10px;
+  &-title {
+    box-shadow: none;
+    font-size: 20px;
+    font-weight: 300;
+    color: #3f51b5;
+    margin-bottom: 15px;
+  }
+}
