--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
             <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
               fiber_manual_record
             </mat-icon>
-            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Items</span>
+            <span style="font-size: 14px; color: rgba(0,0,0,.54);">Units</span>
           </a>
         </mat-nav-list>
       </mat-expansion-panel>
