--- a/src/app/unit/unit-list/unit-list.component.html
+++ b/src/app/unit/unit-list/unit-list.component.html
@@ -1,1 +1,80 @@
-<p>unit-list works!</p>
+<mat-card style="box-shadow: none; display: flex; justify-content: space-between; align-items: center;"
+    class="main_content-title">
+    <span>Unit List</span>
+    <button (click)="openDialog()" mat-raised-button color="primary">
+        <mat-icon style="margin-right: 5px;">add</mat-icon>
+        Add New Unit
+    </button>
+</mat-card>
+
+<mat-card style="box-shadow: none;">
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+        <table mat-table matSort style="box-shadow: none;" [dataSource]=" dataSource" class="mat-elevation-z8">
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Description Column -->
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                <td mat-cell *matCellDef="let element"> {{ element?.description }} </td>
+            </ng-container>
+
+            <!-- CreatedAt Column -->
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>CreatedAt</th>
+                <td mat-cell *matCellDef="let element"> {{ element?.createdAt | date: 'short' }}</td>
+            </ng-container>
+
+            <!-- UpdatedAt Column -->
+            <ng-container matColumnDef="updatedAt">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> UpdatedAt </th>
+                <td mat-cell *matCellDef="let element"> {{ element?.updatedAt | date: 'short'}} </td>
+            </ng-container>
+
+            <!-- UpdatedAt Column -->
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> Actions </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                        <mat-icon>more_horiz
+                        </mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>remove_red_eye</mat-icon>
+                            <span>Show</span>
+                        </button>
+                        <button mat-menu-item (click)="onOpenEditDialog(element?.id, element?.name)">
+                            <mat-icon>edit</mat-icon>
+                            <span>Edit</span>
+                        </button>
+                        <button mat-menu-item (click)="onDeleteUnit(element?.id)">
+                            <mat-icon>delete_outline
+                            </mat-icon>
+                            <span>Delete</span>
+                        </button>
+                    </mat-menu>
+                </td>
+            </ng-container>
+
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+
+    </div>
+
+
+
+</mat-card>
