--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
             </mat-icon>
             <span style="font-size: 14px; color: rgba(0,0,0,.54);">Add Product</span>
           </a>
-          <a mat-list-item style="height: 40px;">
+          <a routerLink="/categories" mat-list-item style="height: 40px;">
             <mat-icon style="font-size: 8px; height: 8px; width: 15px; margin-left: 23px; color: rgba(0,0,0,.54);">
               fiber_manual_record
             </mat-icon>
